--- a/imp_gridsystem/style.css
+++ b/imp_gridsystem/style.css
@@ -69,7 +69,10 @@ body {
 }
 
 .shadow-1 {
-  box-shadow: 4px 4px 4px var(--secondary);
+  box-shadow: 0 13px 10px -15px #32325d40, 
+              0 8px 10px -18px #0000004d, 
+              0 -6px 10px -16px #00000008;
+
 }
 
 /* Aturan CSS untuk ponsel */
